--- a/src/static/css/study.css
+++ b/src/static/css/study.css
@@ -7,14 +7,19 @@
 }
 
 .bg-auto-cfg {
-    background-color: #3a6351; /* Dark muted green */
+    background-color: #3a6351 !important; /* Dark muted green */
 }
 
 .bg-user-cfg {
-    background-color: #8b6d51; /* Muted, desaturated orange */
+    background-color: #8b6d51 !important; /* Muted, desaturated orange */
 }
 
 .card {
     border-radius: 15px; /* Adjust as needed */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* Optional: adds a subtle shadow effect */
 }
+
+.dropdown-toggle::after {
+    display: none !important; 
+  }
+
